# clinicflow-connect

./: .env  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
Backend/: .gitignore  package-lock.json  package.json
Backend/src/: index.ts
Backend/src/config/: index.ts
Backend/src/controllers/: appointmentController.ts  attendanceController.ts  authController.ts  doctorController.ts  hospitalController.ts  leaveController.ts  (+2 more)
android/app/: build.gradle
clinicflow-backend/: package-lock.json
clinicflow-backend/src/: index.ts
clinicflow-connect/: pnpm-lock.yaml  vite.config.ts
clinicflow-connect/clinicflow-backend/: .env.example  pnpm-lock.yaml
server-rust/: Cargo.toml  start.bat  start.sh
server-rust/src/: errors.rs  main.rs
server-rust/src/config/: database.rs  mod.rs
server-rust/src/handlers/: auth.rs  health.rs  user.rs
server-rust/src/middleware/: auth.rs  mod.rs
server-rust/src/models/: appointment.rs  attendance.rs  doctor.rs  doctor_leave.rs  hospital.rs  mod.rs  patient.rs  user.rs
server-rust/src/routes/: appointment.rs  attendance.rs  auth.rs  doctor.rs  hospital.rs  leave.rs  mod.rs  patient.rs  super_admin.rs  upload.rs
src/: App.tsx  index.css
src/context/: DataContext.tsx
src/data/: mockData.ts
src/hooks/: use-mobile.tsx
src/lib/: api.ts
src/pages/: BookAppointment.tsx  ForgotPassword.tsx  HospitalQueueDisplay.tsx  Index.tsx  Login.tsx  NotFound.tsx  Profile.tsx  QueueDisplay.tsx  Register.tsx  RegistrationSuccess.tsx  SplashScreen.tsx
(+92 files in other folders)
