[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.5"
actix-multipart = "0.6.1"
actix-files = "0.6.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
bson = { version = "2.8.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
futures = "0.3.29"
futures-util = "0.3.29"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sanitize-filename = "0.5.0"
regex = "1.10.2"
rand = "0.8.5"
thiserror = "1.0.50"
anyhow = "1.0.75"
actix-web-httpauth = "0.8.1"
mime = "0.3.17"
